# reusable-cup-conveyor-quality-management

./: README.md
conveyorbelt_gazebo/models/: DefectiveItemsBin_text_v02.stl  DefectiveItemsBin_v02.stl  OLD_DefectiveItemsBin.stl  QR Scanner Assy.stl  REWASH_text_v01.stl  UnLoader Part.stl  UnLoader Part_v02.stl  UnLoader Part_v04.stl  monitor_stand.stl  slider_box_stand.stl
conveyorbelt_gazebo/models/conveyor_belt(OLD_v01-Twoconveyors)/: model.sdf
conveyorbelt_gazebo/models/conveyor_belt(OLD_v02-wellworking)/: model.config  model.sdf
conveyorbelt_gazebo/models/conveyor_belt(OLD_v03-long_conv_with_loader)/: model.sdf
conveyorbelt_gazebo/models/conveyor_belt(OLD_v04-barcode_draft)/: model.sdf
conveyorbelt_gazebo/models/conveyor_belt(OLD_v11-monitor)/: model.sdf
conveyorbelt_gazebo/urdf/: cup(OLD_v01).urdf  cup.urdf
conveyorbelt_gazebo/worlds/: conveyorbelt.world
ros2_conveyorbelt/: CMakeLists.txt
ros2_conveyorbelt/src/: slider_box_plugin(OLD_v01_Just_Sinusodial_Repeat).cpp  slider_box_plugin(OLD_v02-Once_+-x_move).cpp  slider_box_plugin(OLD_v03-Sliderbox_collision_affect_none).cpp  slider_box_plugin(OLD_v04-20s after repetition).cpp  slider_box_plugin(OLD_v05-45s_after_start).cpp  slider_box_plugin(OLD_v06).cpp  slider_box_plugin.cpp  slider_box_plugin_2(OLD_v01).cpp  slider_box_plugin_2.cpp
ros2_conveyorbelt_py/: package.xml  setup.cfg  setup.py
ros2_conveyorbelt_py/ros2_conveyorbelt_py/: cup_spawner(OLD_v01).py  cup_spawner(OLD_v02).py  cup_spawner(OLD_v03-cup 5 times spawning).py  cup_spawner(OLD_v04-2초 간격).py  cup_spawner.py  monitor_swapper.py
(+37 files in other folders)
