<?xml version="1.0"?>
<package format="3">
  <name>ros2_conveyorbelt_py</name>
  <version>0.1.0</version>
  <description>Python-based utilities for conveyor belt</description>

  <maintainer email="yobellee@yourdomain.com">yobellee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>setuptools</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
